# wtf

./: .gitignore  README.md  conf.toml  conf.toml.example  pyproject.toml
.github/workflows/: python-app-dev.yml  python-app-main.yml  python-app.yml
src/: ap.py  conf.py  errors.py  main.py  ssh_connection.py  tooling.py
src/wtf/: __init__.py  __main__.py  ap.py  cli.py  conf.py  errors.py  main.py  plotter.py  results.py  ssh_connection.py  telemetry_handling.py  tooling.py
tests/: config_validation_test.py  conftest.py  test_ap.py  test_conf.py  test_results_saving.py  test_tooling.py
tests/fixtures/: invalid_config_duplicate_ip.toml  invalid_config_empty.toml  invalid_config_invalid_exec_mode.toml  invalid_config_invalid_ip.toml  invalid_config_negative_ip.toml  invalid_config_no_exec_mode.toml  invalid_config_overflow_ip.toml  iperf_bidir_tcp.json  valid_config_exec0.toml  valid_config_exec1.toml
tests/smoke_tests/: test_smoke_cli.py
