[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wtf"]

[project.scripts]
wtf = "wtf.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "assertpy>=1.0"
]

[project]
name = "WTF"
version = "0.1.0"
authors = [
  { name="Aleksei Zuev", email="zuevaleksei01@gmail.com" },
]
description = "Wi-Fi Test Framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "paramiko>=3.4.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
license = "AGPL-3.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/KOROBYAKA/WTF"
Issues = "https://github.com/KOROBYAKA/WTF/issues"
